# compendium

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  security.yml  test.yml
bpf/: compendium.bpf.c
src/: ebpf.rs  events.rs  handlers.rs  main.rs  memory.rs  perf.rs  ptrace_ops.rs  report.js  report.rs  summary.rs  syscalls.rs  types.rs
src/handlers/: ebpf_events.rs  fd.rs  io.rs  mem.rs  memory.rs  mod.rs  page_faults.rs  utils.rs
src/report/: mod.rs  report.css  report.js
