[package]
name = "compendium"
version = "0.2.0"
edition = "2024"
description = "A user-friendly strace for x86 Linux with HTML reports"
license = "MIT"
repository = "https://github.com/louisboilard/compendium"

[dependencies]
nix = { version = "0.31", features = ["ptrace", "signal", "process"] }
libc = "0.2"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
perf-event2 = "0.7.4"
libbpf-rs = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
